# enpm661_competition

./: CMakeLists.txt  README.md  package.xml
config/: tb4_setup.bash
docker/: Dockerfile.amr_stack  Dockerfile.enpm661_comp  Dockerfile.test  enpm661-comp.yml  enpm661_comp_entrypoint.sh  requirements.txt
launch/: sim.launch.py  turtlebot4_gz.launch.py  turtlebot4_spawn.launch.py
src/enpm661_competition/: CMakeLists.txt  package.xml
src/enpm661_competition/launch/: sim.launch.py  turtlebot4_comp.launch.py  turtlebot4_spawn.launch.py
src/enpm661_competition/worlds/: competition_world.sdf
worlds/: competition_world.sdf
