<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>enpm661_competition</name>
  <version>0.0.0</version>
  <description>ENPM 661 Competition</description>
  <maintainer email="koustubh@umd.edu">koustubh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot4_gz_gui_plugins</depend>
  <depend>turtlebot4_description</depend>
  <depend>irobot_create_gz_bringup</depend>
  <depend>irobot_create_gz_plugins</depend>
  <depend>turtlebot4_gz_bringup</depend>
  <!-- <depend>turtlebot4_gz_plugins</depend>
  <depend>irobot_create_description</depend>
  <depend>irobot_create_msgs</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
